force-app/main/default/objects/Loss_Sub_Categories__c/Loss_Sub_Categories__c.object-meta.xml
<CustomObject>
    <label>Loss Item</label>
    <nameField>
        <displayFormat>Loss Item {0000000}</displayFormat>
        <label>Loss Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loss Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>