force-app/main/default/objects/Loss_Sub_Categories__c/fields/Accept_Arbitration__c.field-meta.xml
<CustomField>
    <fullName>Accept_Arbitration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accept Arbitration</label>
    <type>Checkbox</type>
</CustomField>