force-app/main/default/objects/Loss_Sub_Categories__c/fields/Agree_to_Settle__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_Settle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agree to Settle?</label>
    <type>Checkbox</type>
</CustomField>