force-app/main/default/objects/Loss_Sub_Categories__c/fields/Arbitration_Accepted_Status__c.field-meta.xml
<CustomField>
    <fullName>Arbitration_Accepted_Status__c</fullName>
    <label>Arbitration Accepted Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>