force-app/main/default/objects/Loss_Sub_Categories__c/fields/Arbitration_in_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Arbitration_in_Negotiation__c</fullName>
    <formula>IF(OR(TEXT(Status__c) =&apos;Arbitration Prep&apos;  ,TEXT(Status__c) =&apos;Arbitration Final Offers&apos; , TEXT(Status__c) =&apos;Arbitrating&apos;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arbitration in Negotiation</label>
    <type>Checkbox</type>
</CustomField>