force-app/main/default/objects/Loss_Sub_Categories__c/fields/Arbitration_Interest__c.field-meta.xml
<CustomField>
    <fullName>Arbitration_Interest__c</fullName>
    <formula>if(NOT(ISBLANK(Interest_Expense_Date__c)),  
( 
( 
if( TEXT(Case__r.Stage__c) =&apos;Closed&apos;, Case__r.Closed_Date__c,TODAY())- 
Interest_Expense_Date__c
) 

/365 
) 
* Interest_Rate__c * if(Arbitrator_Award__c&gt;0,Arbitrator_Award__c,0)
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arbitration Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>