force-app/main/default/objects/Loss_Sub_Categories__c/fields/Arbitration_Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Arbitration_Referred_By__c</fullName>
    <label>Arbitration Referred By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claimant Handler</fullName>
            </value>
            <value>
                <fullName>Defendant Handler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>