force-app/main/default/objects/Loss_Sub_Categories__c/fields/Arbitrator_Award__c.field-meta.xml
<CustomField>
    <fullName>Arbitrator_Award__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Arbitrator Award</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>