force-app/main/default/objects/Loss_Sub_Categories__c/fields/Arbitrator_Comments__c.field-meta.xml
<CustomField>
    <fullName>Arbitrator_Comments__c</fullName>
    <label>Arbitrator Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>