force-app/main/default/objects/Loss_Sub_Categories__c/fields/Arbitrator_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Arbitrator_Rationale__c</fullName>
    <label>Arbitrator Rationale</label>
    <type>TextArea</type>
</CustomField>