force-app/main/default/objects/Loss_Sub_Categories__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Loss_Sub_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>