force-app/main/default/objects/Loss_Sub_Categories__c/fields/Claimant_Final_Offer_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Final_Offer_Confirmed__c</fullName>
    <formula>Loss_Category__r.Case__r.Confirm_Final_Offer_Claimant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claimant Final Offer Confirmed</label>
    <type>Checkbox</type>
</CustomField>