force-app/main/default/objects/Loss_Sub_Categories__c/fields/Claimant_Position__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Position__c</fullName>
    <label>Claimant Position</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>