force-app/main/default/objects/Loss_Sub_Categories__c/fields/Claimant_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Rationale__c</fullName>
    <label>Claimant Rationale</label>
    <type>TextArea</type>
</CustomField>