force-app/main/default/objects/Loss_Sub_Categories__c/fields/Confirm_Arbitration_Reward__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Arbitration_Reward__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Arbitration Reward</label>
    <type>Checkbox</type>
</CustomField>