force-app/main/default/objects/Loss_Sub_Categories__c/fields/Decline_Arbitration__c.field-meta.xml
<CustomField>
    <fullName>Decline_Arbitration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decline Arbitration</label>
    <type>Checkbox</type>
</CustomField>