force-app/main/default/objects/Loss_Sub_Categories__c/fields/Defendant_Average__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Average__c</fullName>
    <formula>Defendant_Position__c / Defendant_Position_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defendant Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>