force-app/main/default/objects/Loss_Sub_Categories__c/fields/Defendant_Handler_Email__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Handler_Email__c</fullName>
    <label>Defendant Handler Email</label>
    <type>Email</type>
</CustomField>