force-app/main/default/objects/Loss_Sub_Categories__c/fields/Defendant_Interest__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Interest__c</fullName>
    <formula>if(NOT(ISBLANK(Interest_Expense_Date__c)), 
( 
( 
if( TEXT(Case__r.Stage__c) =&apos;Closed&apos;, Case__r.Closed_Date__c,TODAY())- 
Interest_Expense_Date__c 
) 

/365 
) 
* Interest_Rate__c * if(Defendant_Position__c&gt;0,Defendant_Position__c,0)

,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defendant Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>