force-app/main/default/objects/Loss_Sub_Categories__c/fields/Defendant_Position__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Position__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Defendant Position</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>