force-app/main/default/objects/Loss_Sub_Categories__c/fields/Defendant_Position_Count__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Position_Count__c</fullName>
    <label>Defendant Position Count</label>
    <summaryForeignKey>Defendant_Firm_Loss_Item_Position__c.Loss_Sub_Category__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>