force-app/main/default/objects/Loss_Sub_Categories__c/fields/Defendant_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Rationale__c</fullName>
    <label>Defendant Rationale</label>
    <type>TextArea</type>
</CustomField>