force-app/main/default/objects/Loss_Sub_Categories__c/fields/Final_Offer_Confirmed_Defendant__c.field-meta.xml
<CustomField>
    <fullName>Final_Offer_Confirmed_Defendant__c</fullName>
    <formula>Loss_Category__r.Case__r.Confirm_Final_Offer_Defendant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Offer Confirmed Defendant</label>
    <type>Checkbox</type>
</CustomField>