force-app/main/default/objects/Loss_Sub_Categories__c/fields/Head_Of_Loss_Code__c.field-meta.xml
<CustomField>
    <fullName>Head_Of_Loss_Code__c</fullName>
    <formula>Loss_Category__r.Loss_Category_Types__r.Code__c</formula>
    <label>Head Of Loss Code</label>
    <type>Text</type>
</CustomField>