force-app/main/default/objects/Loss_Sub_Categories__c/fields/Head_of_Loss_Description__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Loss_Description__c</fullName>
    <formula>Loss_Category__r.Loss_Category_Types__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Head of Loss Description</label>
    <type>Text</type>
</CustomField>