force-app/main/default/objects/Loss_Sub_Categories__c/fields/Injury_Description__c.field-meta.xml
<CustomField>
    <fullName>Injury_Description__c</fullName>
    <label>Injury Description</label>
    <type>TextArea</type>
</CustomField>