force-app/main/default/objects/Loss_Sub_Categories__c/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <formula>if(NOT(ISNULL(Interest_Expense_Date__c)), 
(
(
if( TEXT(Case__r.Stage__c) =&apos;Closed&apos;,  Case__r.Closed_Date__c , TODAY())-
 Interest_Expense_Date__c 
)

/365
) 
* Interest_Rate__c * Claimant_Position__c
,0)</formula>
    <label>Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>