force-app/main/default/objects/Loss_Sub_Categories__c/fields/Interest_Expense_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Expense_Date__c</fullName>
    <label>Interest Expense Date</label>
    <type>Date</type>
</CustomField>