force-app/main/default/objects/Loss_Sub_Categories__c/fields/Loss_Category__c.field-meta.xml
<CustomField>
    <fullName>Loss_Category__c</fullName>
    <label>Head of Loss</label>
    <referenceTo>Loss_Category__c</referenceTo>
    <relationshipLabel>Loss Items</relationshipLabel>
    <relationshipName>Loss_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>