force-app/main/default/objects/Loss_Sub_Categories__c/fields/Loss_Category_ID__c.field-meta.xml
<CustomField>
    <fullName>Loss_Category_ID__c</fullName>
    <formula>Loss_Category__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loss Category ID</label>
    <type>Text</type>
</CustomField>