force-app/main/default/objects/Loss_Sub_Categories__c/fields/Loss_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Loss_Item_Type__c</fullName>
    <formula>Name  +  &apos; &apos; + &apos;-&apos; + &apos; &apos; + TEXT(Loss_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loss Item &amp; Type</label>
    <type>Text</type>
</CustomField>