force-app/main/default/objects/Loss_Sub_Categories__c/fields/Merit__c.field-meta.xml
<CustomField>
    <fullName>Merit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merit</label>
    <referenceTo>Merit__c</referenceTo>
    <relationshipName>Loss_Sub_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>