force-app/main/default/objects/Loss_Sub_Categories__c/fields/Negotiation_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Timeout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updates from Loss Category</description>
    <label>Negotiation Timeout</label>
    <type>Checkbox</type>
</CustomField>