force-app/main/default/objects/Loss_Sub_Categories__c/fields/Past_Future_Financial_Item__c.field-meta.xml
<CustomField>
    <fullName>Past_Future_Financial_Item__c</fullName>
    <formula>Past_Future_Financial_Losses__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past/Future Financial Item</label>
    <type>Text</type>
</CustomField>