force-app/main/default/objects/Loss_Sub_Categories__c/fields/Past_Future_Financial_Losses__c.field-meta.xml
<CustomField>
    <fullName>Past_Future_Financial_Losses__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Past/Future Financial Losses</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>((1 OR 2) AND 3) OR (2 AND 4)</booleanFilter>
        <filterItems>
            <field>Past_Future_Financial_Losses__c.Type__c</field>
            <operation>equals</operation>
            <value>Past</value>
        </filterItems>
        <filterItems>
            <field>Past_Future_Financial_Losses__c.Type__c</field>
            <operation>equals</operation>
            <value>Both</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>PFL</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>FFL</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Past_Future_Financial_Losses__c</referenceTo>
    <relationshipLabel>Loss Items</relationshipLabel>
    <relationshipName>Loss_Items</relationshipName>
    <type>Lookup</type>
</CustomField>