force-app/main/default/objects/Loss_Sub_Categories__c/fields/Prov_Act_Value__c.field-meta.xml
<CustomField>
    <fullName>Prov_Act_Value__c</fullName>
    <description>Provisional or actual value of damages</description>
    <label>Provisional / Actual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>