force-app/main/default/objects/Loss_Sub_Categories__c/fields/Refer_to_Arbitration__c.field-meta.xml
<CustomField>
    <fullName>Refer_to_Arbitration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refer to Arbitration</label>
    <type>Checkbox</type>
</CustomField>