force-app/main/default/objects/Loss_Sub_Categories__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <formula>Past_Future_Financial_Losses__r.Sub_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Category</label>
    <type>Text</type>
</CustomField>