force-app/main/default/objects/Loss_Sub_Categories__c/fields/Submit_Claimant__c.field-meta.xml
<CustomField>
    <fullName>Submit_Claimant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit - Claimant</label>
    <type>Checkbox</type>
</CustomField>