force-app/main/default/objects/Loss_Sub_Categories__c/fields/Submit_Defendant__c.field-meta.xml
<CustomField>
    <fullName>Submit_Defendant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit - Defendant</label>
    <type>Checkbox</type>
</CustomField>