force-app/main/default/objects/Loss_Sub_Categories__c/fields/Sum_Defendent_Position__c.field-meta.xml
<CustomField>
    <fullName>Sum_Defendent_Position__c</fullName>
    <label>Sum Defendent Position</label>
    <summarizedField>Defendant_Firm_Loss_Item_Position__c.Defendant_Position__c</summarizedField>
    <summaryForeignKey>Defendant_Firm_Loss_Item_Position__c.Loss_Sub_Category__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>