force-app/main/default/objects/Loss_Sub_Categories__c/recordTypes/FFL.recordType-meta.xml
<RecordType>
    <fullName>FFL</fullName>
    <active>true</active>
    <description>Future Financial Losses</description>
    <label>FFL</label>
</RecordType>