force-app/main/default/objects/Loss_Sub_Categories__c/recordTypes/PFL.recordType-meta.xml
<RecordType>
    <fullName>PFL</fullName>
    <active>true</active>
    <description>Past Financial Losses</description>
    <label>PFL</label>
</RecordType>