force-app/main/default/objects/Loss_Sub_Categories__c/recordTypes/PSLA.recordType-meta.xml
<RecordType>
    <fullName>PSLA</fullName>
    <active>true</active>
    <description>Personal Suffering &amp; Loss of Amenities</description>
    <label>PSLA</label>
</RecordType>