force-app/main/default/objects/Loss_Sub_Categories__c/recordTypes/Total.recordType-meta.xml
<RecordType>
    <fullName>Total</fullName>
    <active>true</active>
    <label>Total Amount</label>
</RecordType>