force-app/main/default/objects/Loss_Sub_Categories__c/validationRules/Arbitration_Accept_and_Declilne.validationRule-meta.xml
<ValidationRule>
    <fullName>Arbitration_Accept_and_Declilne</fullName>
    <active>true</active>
    <description>Arbitration Accepted and Declined cannot be selected at the same time</description>
    <errorConditionFormula>AND( Accept_Arbitration__c = TRUE, Decline_Arbitration__c = TRUE)</errorConditionFormula>
    <errorMessage>Arbitration Accepted and Declined cannot be selected at the same time</errorMessage>
</ValidationRule>