force-app/main/default/objects/Loss_Sub_Categories__c/validationRules/Please_enter_a_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Please_enter_a_value</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
NOT(Case__r.RecordType.DeveloperName == &quot;PersonalInjuryMotorVehicleArbitrationOnly&quot;),
AND(
ISBLANK(Claimant_Position__c )), FALSE)</errorConditionFormula>
    <errorDisplayField>Claimant_Position__c</errorDisplayField>
    <errorMessage>Please enter your position</errorMessage>
</ValidationRule>