force-app/main/default/objects/Loss_Sub_Categories__c/validationRules/Value_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Claimant_Position__c &lt;  0</errorConditionFormula>
    <errorDisplayField>Claimant_Position__c</errorDisplayField>
    <errorMessage>You cannot enter a zero or a negative value</errorMessage>
</ValidationRule>