force-app/main/default/objects/Loss_Sub_Categories__c/validationRules/Value_cannot_exceed_25000_GBP.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_cannot_exceed_25000_GBP</fullName>
    <active>false</active>
    <errorConditionFormula>Claimant_Position__c &gt; 25000</errorConditionFormula>
    <errorDisplayField>Claimant_Position__c</errorDisplayField>
    <errorMessage>Please enter a value less than 25,000</errorMessage>
</ValidationRule>