force-app/main/default/objects/Loss_Sub_Categories__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Loss_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Arbitrator_Award__c</columns>
    <columns>Arbitrated_by__c</columns>
    <columns>Arbitration_Accepted_Status__c</columns>
    <columns>Arbitration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Arbitration_Accepted_Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>All</label>
</ListView>